OBPIH-7429 Alignment issue for info bar about inventory updated during count (#5411)

--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -1720,6 +1720,12 @@ div.search-input:focus-within {
   }
 }
 
+@for $i from 1 through 10 {
+  .t-#{$i} {
+    top: #{$i}rem;
+  }
+}
+
 .cursor-pointer {
   cursor: pointer;
 }
